--- a/sample.html
+++ b/sample.html
@@ -4,22 +4,16 @@
 <head></head>
 
 <body>
-    <div class="todo-card">
-        <div class="todo-card-header">
-            <h1 class="todo-card-title">Todolist</h1>
-            <p class="todo-card-caption">
-                Each day I will accomplish on thing on my todo list.
-            </p>
-        </div>
-        <p class="todo-list">Read a Book</p>
-        <p class="todo-description">
-            I don't think that the human race will survive the next thousand years,
-            unless we spread into space. There are too many accidents that can befall
-            life on a single planet. But I'm an optimist...
-        </p>
-        <div class="todo-card-footer">
-            <button class="button">Start</button>
-            <p class="text-underline">Don't skip introduction</p>
+    <div class="bg-container">
+        <h1 class="person-name">Rahul</h1>
+        <div class="messages-container">
+            <p class="message-text message-sent">Hello Rahul, how are you?</p>
+            <p class="message-text message-received">Hi Varakumar, I am good. How about you?</p>
+            <p class="message-text message-sent">I'm fine. I published my website recently</p>
+            <p class="message-text message-received">Oh great Varakumar! Can you send me the URL?</p>
+            <p class="message-text message-sent">https://rajesh.ccbp.tech</p>
+            <p class="message-text message-received">Awesome Varakumar, where did you lear?</p>
+            <p class="message-text message-sent">NxtWave CCBP 4.0 Program</p>
         </div>
     </div>
 </body>
