--- a/sample.html
+++ b/sample.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</head>
 
 <body>
-    <div class="bg-container">
-        <h1 class="person-name">Rahul</h1>
-        <div class="messages-container">
-            <p class="message-text message-sent">Hello Rahul, how are you?</p>
-            <p class="message-text message-received">Hi Varakumar, I am good. How about you?</p>
-            <p class="message-text message-sent">I'm fine. I published my website recently</p>
-            <p class="message-text message-received">Oh great Varakumar! Can you send me the URL?</p>
-            <p class="message-text message-sent">https://rajesh.ccbp.tech</p>
-            <p class="message-text message-received">Awesome Varakumar, where did you lear?</p>
-            <p class="message-text message-sent">NxtWave CCBP 4.0 Program</p>
+    <div class="bg-container d-flex flex-column justify-content-end">
+        <div class="advanced-technologies-card">
+            <h1 class="advanced-technologies-title">Advanced Technologies</h1>
+            <p class="advanced-technologies-description">
+                Machinery and equipment developed from the application of scientific
+                knowledge.
+            </p>
+            <button class="learn-more-button">Learn more</button>
+            <button class="save-draft-button">Save Draft</button>
         </div>
     </div>
 </body>
