--- a/sample.html
+++ b/sample.html
@@ -10,14 +10,18 @@
 
 <body>
     <div class="bg-container d-flex flex-column justify-content-end">
-        <div class="advanced-technologies-card">
-            <h1 class="advanced-technologies-title">Advanced Technologies</h1>
-            <p class="advanced-technologies-description">
-                Machinery and equipment developed from the application of scientific
-                knowledge.
+        <div class="news-card">
+            <p class="news-category">NEWS OF THE DAY</p>
+            <h1 class="news-title">
+                iB Cricket announces world's first Virtual Reality Cricket League
+            </h1>
+            <p class="news-description">
+                iB Cricket and Viu togther have announced the World's first virtual reality cricket league
+                featuring 12 international cricketers, who will be competing against each other for the
+                iB Cricket Super Over League title in Mumbai. Iconic cricketers like
+                Virender Sehwag, Suresh Rains, Brendon McCullum will be competing in the league.
             </p>
-            <button class="learn-more-button">Learn more</button>
-            <button class="save-draft-button">Save Draft</button>
+            <button class="button">Read more</button>
         </div>
     </div>
 </body>
