--- a/sample.html
+++ b/sample.html
@@ -10,18 +10,13 @@
 
 <body>
     <div class="bg-container d-flex flex-column justify-content-end">
-        <div class="news-card">
-            <p class="news-category">NEWS OF THE DAY</p>
-            <h1 class="news-title">
-                iB Cricket announces world's first Virtual Reality Cricket League
-            </h1>
-            <p class="news-description">
-                iB Cricket and Viu togther have announced the World's first virtual reality cricket league
-                featuring 12 international cricketers, who will be competing against each other for the
-                iB Cricket Super Over League title in Mumbai. Iconic cricketers like
-                Virender Sehwag, Suresh Rains, Brendon McCullum will be competing in the league.
-            </p>
-            <button class="button">Read more</button>
+        <div class="card-container">
+            <p class="hotel-name">Royal Grand Hotel</p>
+            <p class="hotel-add">R.K Beach, Visakhapatnam</p>
+            <p class="hotel-price">1200/-</p>
+        </div>
+        <div class="button-container">
+            <button class="button">Book Now</button>
         </div>
     </div>
 </body>
