--- a/sample.html
+++ b/sample.html
@@ -9,14 +9,45 @@
 </head>
 
 <body>
-    <div class="bg-container d-flex flex-column justify-content-end">
-        <div class="card-container">
-            <p class="hotel-name">Royal Grand Hotel</p>
-            <p class="hotel-add">R.K Beach, Visakhapatnam</p>
-            <p class="hotel-price">1200/-</p>
+    <div class="cricketer-top-section d-flex flex-row">
+        <div>
+            <h1 class="cricketer-name">K.L. Rahul</h1>
+            <p class="cricketer-description">
+                Kannur Lokesh Rahul (born 18 April 1992), commonly known as KL Rahul, is an Indian
+                international crickter who plays...more
+            </p>
         </div>
-        <div class="button-container">
-            <button class="button">Book Now</button>
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img1.png" />
+    </div>
+    <div class="cricketer-bottom-section">
+        <p class="sub-title">IPL Records</p>
+        <div class="ipl-container d-flex flex-row">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img2.png" />
+            <div class="ipl-card-text">
+                <p class="ipl-card-title">KXIP vs RCB</p>
+                <p class="ipl-card-caption">
+                    He scored an unbeaten 132 off just 69 balls
+                    against Royal Challengers Bangalore...more
+                </p>
+            </div>
+        </div>
+        <p class="sub-title">Videos</p>
+        <div class="d-flex flex-row">
+            <div class="video-text-container">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img3.png" />
+                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
+            </div>
+            <div class="video-text-container">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img4.png" />
+                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
+            </div>
+            <div class="video-text-container">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img5.png" />
+                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
+            </div>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary">View more</button>
         </div>
     </div>
 </body>
