--- a/sample.html
+++ b/sample.html
@@ -9,45 +9,55 @@
 </head>
 
 <body>
-    <div class="cricketer-top-section d-flex flex-row">
+    <div class="top-section d-flex flex-row">
         <div>
-            <h1 class="cricketer-name">K.L. Rahul</h1>
-            <p class="cricketer-description">
-                Kannur Lokesh Rahul (born 18 April 1992), commonly known as KL Rahul, is an Indian
-                international crickter who plays...more
+            <p class="top-section-heading">All you need to know about COVID-19</p>
+            <button class="top-section-button">Know more</button>
+        </div>
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/medicalcare-img.png" />
+    </div>
+    <div class="bottom-section d-flex flex-row">
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/coronavirus-img.png" class="covid-image" />
+        <div class="bottom-section-card-container">
+            <p class="bottom-section-heading">COVID-19 Test</p>
+            <p class="bottom-section-caption">
+                If you think you have been exposed to novel coronavirus (COVID-19)...more
             </p>
         </div>
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img1.png" />
     </div>
-    <div class="cricketer-bottom-section">
-        <p class="sub-title">IPL Records</p>
-        <div class="ipl-container d-flex flex-row">
-            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img2.png" />
-            <div class="ipl-card-text">
-                <p class="ipl-card-title">KXIP vs RCB</p>
-                <p class="ipl-card-caption">
-                    He scored an unbeaten 132 off just 69 balls
-                    against Royal Challengers Bangalore...more
-                </p>
-            </div>
+    <h3 class="sub-title">Symptoms</h3>
+    <div class="d-flex flex-row">
+        <div class="covid-symptom-container cough-bg">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
+            <p class="covid-card-description">
+                Dry Cough
+            </p>
         </div>
-        <p class="sub-title">Videos</p>
-        <div class="d-flex flex-row">
-            <div class="video-text-container">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img3.png" />
-                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
-            </div>
-            <div class="video-text-container">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img4.png" />
-                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
-            </div>
-            <div class="video-text-container">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img5.png" />
-                <p class="video-description">KL Rahul hits 337 for Karnataka</p>
-            </div>
+        <div class="covid-symptom-container fever-bg">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
+            <p class="covid-card-description">
+                High Fever
+            </p>
         </div>
-        <div class="text-center">
-            <button class="btn btn-primary">View more</button>
+        <div class="covid-symptom-container headache-bg">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
+            <p class="covid-card-description">
+                Headache
+            </p>
+        </div>
+    </div>
+    <h3 class="sub-title">Videos</h3>
+    <div class="footer-section d-flex flex-row">
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/doctor-img.png" class="video-image" />
+        <div class="footer-section-text-container">
+            <p class="footer-section-text-container-heading">
+                To prevent the spread of..
+            </p>
+            <p class="footer-section-text-container-description">
+                If you think you have been exposed to novel corona virus
+                (COVID-19)
+            </p>
+            <button class="top-section-button">Watch Video</button>
         </div>
     </div>
 </body>
