--- a/sample.html
+++ b/sample.html
@@ -9,55 +9,62 @@
 </head>
 
 <body>
-    <div class="top-section d-flex flex-row">
-        <div>
-            <p class="top-section-heading">All you need to know about COVID-19</p>
-            <button class="top-section-button">Know more</button>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c1-img.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c2-img.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c3-img.png" class="d-block w-100" alt="...">
+            </div>
         </div>
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/medicalcare-img.png" />
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <div class="bottom-section d-flex flex-row">
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/coronavirus-img.png" class="covid-image" />
-        <div class="bottom-section-card-container">
-            <p class="bottom-section-heading">COVID-19 Test</p>
-            <p class="bottom-section-caption">
-                If you think you have been exposed to novel coronavirus (COVID-19)...more
-            </p>
+    <div class="bottom-section">
+        <p class="title">About</p>
+        <p class="para">
+            Goa is known for its striking landscape, famous beaches in Inida, astounding monuments and churches and bustling Goa nighrlife. Goa is one of the most
+            visited tourist places in India, especially on weekends. as it is not very far from Mumbai and having Panjai as its capital and Vasco da Gama
+            as the largest city. It attracts a large number of tourist from all over the world, round the year.
+        </p>
+        <p class="title">More Pictures</p>
+        <div class="d-flex flex-row">
+            <div class="picture-card">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more1-img.png" />
+            </div>
+            <div class="picture-card">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more2-img.png" />
+            </div>
+            <div class="picture-card">
+                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more3-img.png" />
+            </div>
         </div>
-    </div>
-    <h3 class="sub-title">Symptoms</h3>
-    <div class="d-flex flex-row">
-        <div class="covid-symptom-container cough-bg">
-            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
-            <p class="covid-card-description">
-                Dry Cough
-            </p>
-        </div>
-        <div class="covid-symptom-container fever-bg">
-            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
-            <p class="covid-card-description">
-                High Fever
-            </p>
-        </div>
-        <div class="covid-symptom-container headache-bg">
-            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/fever-img.png" />
-            <p class="covid-card-description">
-                Headache
-            </p>
-        </div>
-    </div>
-    <h3 class="sub-title">Videos</h3>
-    <div class="footer-section d-flex flex-row">
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/doctor-img.png" class="video-image" />
-        <div class="footer-section-text-container">
-            <p class="footer-section-text-container-heading">
-                To prevent the spread of..
-            </p>
-            <p class="footer-section-text-container-description">
-                If you think you have been exposed to novel corona virus
-                (COVID-19)
-            </p>
-            <button class="top-section-button">Watch Video</button>
+        <p class="title">Videos</p>
+        <div class="d-flex flex-row">
+            <div class="embed-responsive embed-responsive-16by9 video-card">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+            </div>
+            <div class="embed-responsive embed-responsive-16by9 video-card">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4irzfMfTmM8?rel=0" allowfullscreen></iframe>
+            </div>
+            <div class="embed-responsive embed-responsive-16by9 video-card">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/OJu0gjzsvQE?rel=0" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 </body>
