--- a/sample.html
+++ b/sample.html
@@ -9,63 +9,48 @@
 </head>
 
 <body>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c1-img.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c2-img.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c3-img.png" class="d-block w-100" alt="...">
+    <div class="bg-container">
+        <div class="header-section">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c1-img.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c2-img.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c3-img.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div class="bottom-section">
-        <p class="title">About</p>
-        <p class="para">
-            Goa is known for its striking landscape, famous beaches in Inida, astounding monuments and churches and bustling Goa nighrlife. Goa is one of the most
-            visited tourist places in India, especially on weekends. as it is not very far from Mumbai and having Panjai as its capital and Vasco da Gama
-            as the largest city. It attracts a large number of tourist from all over the world, round the year.
+        <div class="bottom-section d-flex flex-row justify-content-between">
+            <h1 class="heading">Finding Nemo</h1>
+            <button class="button">Watch Now</button>
+        </div>
+        <p class="description">
+            A clown fish, is overly cautions with his son, Nemo who has a foreshortened fin. When Nemo swims too close to
+            the surface to prove himmself, he is caught by a driver, and horrified Marlin must set out to find him. A blue reef fish named Dory joins Marlin and complicates the
+            encounters with sharks, jellyfish, and a host of ocean dangers. Meanwhile, Nemo plots his from a dentist's fish tank.
         </p>
-        <p class="title">More Pictures</p>
-        <div class="d-flex flex-row">
-            <div class="picture-card">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more1-img.png" />
-            </div>
-            <div class="picture-card">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more2-img.png" />
-            </div>
-            <div class="picture-card">
-                <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more3-img.png" />
-            </div>
-        </div>
-        <p class="title">Videos</p>
-        <div class="d-flex flex-row">
-            <div class="embed-responsive embed-responsive-16by9 video-card">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-            </div>
-            <div class="embed-responsive embed-responsive-16by9 video-card">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4irzfMfTmM8?rel=0" allowfullscreen></iframe>
-            </div>
-            <div class="embed-responsive embed-responsive-16by9 video-card">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/OJu0gjzsvQE?rel=0" allowfullscreen></iframe>
-            </div>
-        </div>
+        <p class="sub-movie">Similar Movies</p>
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/finding-dory-img.png" />
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/bugslife-img.png" class="similar-movie-image" />
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/ratatouille-movie-img.png" />
     </div>
 </body>
 
