--- a/sample.html
+++ b/sample.html
@@ -9,49 +9,24 @@
 </head>
 
 <body>
-    <div class="bg-container">
-        <div class="header-section">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c1-img.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c2-img.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/nemo-c3-img.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+    <div>
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/iphoneX-bg.png" class="mobile-image" />
+        <div class="details-container">
+            <h1 class="details-heading">Specifications:</h1>
+            <ul>
+                <li class="list-item">3 GB RAM</li>
+                <li class="list-item">5.80 Super Retina HD OLED Display</li>
+                <li class="list-item">Front Camera 7MP</li>
+                <li class="list-item">Rear Camera 7MP</li>
+                <li class="list-item">Apple A11 Bionic Processor</li>
+                <li class="list-item">Battery Capacity 2716mAH</li>
+            </ul>
+            <div class="d-flex flex-row justify-content-center">
+                <button class="btn btn-primary">Buy Now</button>
             </div>
         </div>
-        <div class="bottom-section d-flex flex-row justify-content-between">
-            <h1 class="heading">Finding Nemo</h1>
-            <button class="button">Watch Now</button>
-        </div>
-        <p class="description">
-            A clown fish, is overly cautions with his son, Nemo who has a foreshortened fin. When Nemo swims too close to
-            the surface to prove himmself, he is caught by a driver, and horrified Marlin must set out to find him. A blue reef fish named Dory joins Marlin and complicates the
-            encounters with sharks, jellyfish, and a host of ocean dangers. Meanwhile, Nemo plots his from a dentist's fish tank.
-        </p>
-        <p class="sub-movie">Similar Movies</p>
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/finding-dory-img.png" />
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/bugslife-img.png" class="similar-movie-image" />
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/ratatouille-movie-img.png" />
     </div>
+
 </body>
 
 </html>
