--- a/sample.html
+++ b/sample.html
@@ -9,24 +9,47 @@
 </head>
 
 <body>
-    <div>
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/iphoneX-bg.png" class="mobile-image" />
-        <div class="details-container">
-            <h1 class="details-heading">Specifications:</h1>
-            <ul>
-                <li class="list-item">3 GB RAM</li>
-                <li class="list-item">5.80 Super Retina HD OLED Display</li>
-                <li class="list-item">Front Camera 7MP</li>
-                <li class="list-item">Rear Camera 7MP</li>
-                <li class="list-item">Apple A11 Bionic Processor</li>
-                <li class="list-item">Battery Capacity 2716mAH</li>
-            </ul>
-            <div class="d-flex flex-row justify-content-center">
-                <button class="btn btn-primary">Buy Now</button>
-            </div>
+    <div id="sectionConferenceHomePage">
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/conference-img.png" class="conference-image" />
+        <div class="conference-container text-center">
+            <h1 class="conference-heading">The Things Conference</h1>
+            <p class="conference-description">Redefining the future of IoT with LoRaWAN</p>
+            <button class="btn btn-primary" onclick="display('sectionConferenceDetailsPage')">Know more</button>
         </div>
     </div>
-
+    <div id="sectionConferenceDetailsPage">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vKJ6nXE_6Hc?rel=0" allowfullscreen></iframe>
+        </div>
+        <div class="conference-container text-center">
+            <h1 class="conference-sub-title">The Things Conference</h1>
+            <p class="conference-sub-description">
+                Join Asia's Largest Conference on LoRaWAN
+            </p>
+            <div class="d-flex flex-row justify-content-center">
+                <div class="conference-status-container">
+                    <h1 class="conference-status-heading">1400+</h1>
+                    <p class="conference-status-description">Attendees</p>
+                </div>
+                <div class="conference-status-container">
+                    <h1 class="conference-status-heading">100+</h1>
+                    <p class="conference-status-description">Workshops</p>
+                </div>
+            </div>
+            <div class="d-flex flex-row justify-content-center">
+                <div class="conference-status-container">
+                    <h1 class="conference-status-heading">120+</h1>
+                    <p class="conference-status-description">Speakers</p>
+                </div>
+                <div class="conference-status-container">
+                    <h1 class="conference-status-heading">10+</h1>
+                    <p class="conference-status-description">Countries</p>
+                </div>
+            </div>
+            <button class="btn btn-primary" onclick="display('sectionConferenceHomePage')">Back</button>
+        </div>
+    </div>
+    <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
 </body>
 
 </html>
