--- a/sample.html
+++ b/sample.html
@@ -9,47 +9,25 @@
 </head>
 
 <body>
-    <div id="sectionConferenceHomePage">
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/conference-img.png" class="conference-image" />
-        <div class="conference-container text-center">
-            <h1 class="conference-heading">The Things Conference</h1>
-            <p class="conference-description">Redefining the future of IoT with LoRaWAN</p>
-            <button class="btn btn-primary" onclick="display('sectionConferenceDetailsPage')">Know more</button>
+    <div class="bg-container">
+        <h1 class="score">Score:25/45</h1>
+        <div class="question-container">
+            <h1 class="question-no">Question 10</h1>
+            <p class="question">Which of the following is the content of the HTML paragraph element?</p>
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/coding-question-img.png" class="question-image" />
+        </div>
+        <div class="answer-container">
+            <ul class="order-list">
+                <li class="answer">A. HTML heading element</li>
+                <li class="answer">B. HTML paragraph element</li>
+                <li class="answer correct-answer">C. This is paragraph..</li>
+                <li class="answer">D. None of the given options</li>
+            </ul>
+            <div class="d-flex flex-row justify-content-center">
+                <button class="button">Submit</button>
+            </div>
         </div>
     </div>
-    <div id="sectionConferenceDetailsPage">
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vKJ6nXE_6Hc?rel=0" allowfullscreen></iframe>
-        </div>
-        <div class="conference-container text-center">
-            <h1 class="conference-sub-title">The Things Conference</h1>
-            <p class="conference-sub-description">
-                Join Asia's Largest Conference on LoRaWAN
-            </p>
-            <div class="d-flex flex-row justify-content-center">
-                <div class="conference-status-container">
-                    <h1 class="conference-status-heading">1400+</h1>
-                    <p class="conference-status-description">Attendees</p>
-                </div>
-                <div class="conference-status-container">
-                    <h1 class="conference-status-heading">100+</h1>
-                    <p class="conference-status-description">Workshops</p>
-                </div>
-            </div>
-            <div class="d-flex flex-row justify-content-center">
-                <div class="conference-status-container">
-                    <h1 class="conference-status-heading">120+</h1>
-                    <p class="conference-status-description">Speakers</p>
-                </div>
-                <div class="conference-status-container">
-                    <h1 class="conference-status-heading">10+</h1>
-                    <p class="conference-status-description">Countries</p>
-                </div>
-            </div>
-            <button class="btn btn-primary" onclick="display('sectionConferenceHomePage')">Back</button>
-        </div>
-    </div>
-    <script type="text/javascript" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/js/ccbp-ui-kit.js"></script>
 </body>
 
 </html>
